# cinereserve

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
apps/movies/: admin.py  models.py  serializers.py  urls.py  views.py
apps/movies/management/commands/: seed_data.py
apps/movies/migrations/: 0001_initial.py
apps/movies/tests/: test_movies.py
apps/seats/: admin.py  models.py  serializers.py  views.py
apps/seats/migrations/: 0001_initial.py  0002_initial.py
apps/seats/tests/: test_seats.py
apps/sessions/: admin.py  apps.py  models.py  serializers.py  urls.py  urls_movie_sessions.py  views.py
apps/sessions/migrations/: 0001_initial.py  0002_initial.py
apps/sessions/tests/: test_sessions.py
apps/tickets/: admin.py  models.py  serializers.py  tasks.py  urls_checkout.py  urls_reservations.py  urls_tickets.py  views.py
apps/tickets/migrations/: 0001_initial.py  0002_initial.py
apps/tickets/tests/: test_tickets.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_users.py
config/: api_urls.py  urls.py
config/settings/: base.py  production.py
core/: permissions.py  redis_lock.py
